changes made to menu, made the links active

--- a/Menu/Menu.less
+++ b/Menu/Menu.less
@@ -25,6 +25,12 @@
   text-align: center;
 }
 
+.nav-item {
+  cursor: pointer;
+  text-decoration: none;
+  color: #f2f90e;
+}
+
 .menu--open {
   display: block;
 }
